Updated project according to new API(see swagger.yaml)  -added Groups to model(substitute of ListOfContainers)  -edited descriptions and summary accordingly  -renamed contextPath from /v2 to /api
