# server/src/main/java/cz/plc/prx/docker/dash/api/InstanceApiController.java
@@ -10,8 +10,17 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.multipart.MultipartFile;
 
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-10-10T07:43:14.863Z")
+import java.util.List;
+
+import javax.validation.constraints.*;
+import javax.validation.Valid;
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2017-10-12T16:13:23.987Z")
 
 @Controller
 public class InstanceApiController implements InstanceApi {
@@ -20,12 +29,12 @@ public class InstanceApiController implements InstanceApi {
     DockerConnectionService docker;
 
 
-    public ResponseEntity<Void> instanceDelete(@ApiParam(value = "name of selected container",required=true ) @PathVariable("id") String id) {
+    public ResponseEntity<Void> instanceDelete(@ApiParam(value = "name of selected Instance",required=true ) @PathVariable("id") String id) {
         // do some magic!
         return new ResponseEntity<Void>(HttpStatus.OK);
     }
 
-    public ResponseEntity<InstanceExt> instanceGet(@ApiParam(value = "name of selected container",required=true ) @PathVariable("id") String id) {
+    public ResponseEntity<InstanceExt> instanceGet(@ApiParam(value = "name of selected Instance",required=true ) @PathVariable("id") String id) {
         // do some magic!
         return new ResponseEntity<InstanceExt>(HttpStatus.OK);
     }
