# server/src/main/java/cz/plc/prx/docker/dash/model/InstanceExt.java
@@ -2,12 +2,16 @@ package cz.plc.prx.docker.dash.model;
 
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
-
+import cz.plc.prx.docker.dash.model.Instance;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
 
 /**
  * InstanceExt
